static/css/style.css
/* CSS Variables */
:root {
    --primary: #ddd;
    --dark: #333;
    --light: rgb(243, 234, 234);
    --light-blue: rgb(169, 222, 222);
    --black: rgb(74, 82, 82);
    --shadow: 0 1px 5px rgba(104,104,104, 0.8);
    --title-color: rgb(135, 125, 116);
}


html {
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    color: var(--dark);
}
body {
    margin: 0;
    padding: 20px;
    line-height: 1.4;
    background: linear-gradient(to left, rgb(201, 240, 240), rgba(248, 248, 248, 0.7));
    background-size: cover;

}
.wrapper {
    display: grid;
    gap: 20px;
    height: 100vh;

} 

.btn {
    background: var(--light-blue);
    color: black;
    padding: 0.6rem 1.3rem;
    text-decoration: none;
    border: 0;
    margin-top: 30px;
    
}

nav {
    display: grid;
    background: var(--dark);

}
nav ul {
    display: grid;
    grid-gap: 20px;
    padding: 0;
    list-style: none;
    grid-template-columns: repeat(3, 1fr);
    box-shadow: var(--shadow);
    margin-bottom: 0;

}

nav a {
    display: block;
    text-decoration: none;
    padding: 0.8rem;
    text-align: center;
    color: white;
    text-transform: uppercase;
    font-size: 1.1rem;
}

nav a:hover {
    font-size: 25px;
    text-decoration: none;
}

.password-section {
    display: grid;
    grid-gap: 20px;
    grid-template-areas: 
        'box-1 box-2'
        'box-1 box-3';
}

.box-1 {
    grid-area: box-1;
    /* min-height: 500px; */
    opacity: 0.9;
    background: var(--light);
    padding: 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    box-shadow: var(--shadow);

}
.box-2 {
    grid-area: box-2;
    background: var(--light);
    opacity: 0.9;
    padding: 3rem;
    display: flex;
    flex-direction: row;
    align-items: left;
    justify-content: space-evenly;
    box-shadow: var(--shadow); 

}
.box-3 {
    grid-area: box-3;
    background: var(--light);
    min-height: 50px;
    opacity: 0.9;
    padding: 5px;
    justify-content: center;
    align-items: center;
    box-shadow: var(--shadow);
    display: grid;
    gap: 2px;
    grid-template-columns: auto auto auto;
    grid-template-areas: 
        'ads-box1 ads-box2 ads-box3';
}

img {
    width: 150px;
    height: 150px;
}

#ads1 {
    grid-area: ads-box1;
}

#ads2 {
    grid-area: ads-box2;
}

#ads3 {
    grid-area: ads-box3;
}

.box-3 div {
    box-shadow: var(--shadow);
    width: 200px;
    height: 200px;
    text-align: center;
    justify-content: center;
    margin: 3px;
}
.checkboxes {
    display: flex;
    flex-direction: column;
}

.checkbox-group div {
    display: flex;
    flex-direction: row;
}

footer {
    display: block;
    padding: 25px;
    background: var(--black);
    text-align: center;
    color: white;

}

.title {
    background: var(--light);
    box-shadow: var(--shadow);
    padding: 10px;
    text-align: center;

}

hr {
    width: 100%;
}

#password-generated {
    margin: 30px;
    width: auto;
    height: auto;
    background: var(--dark);
    color: white;
    overflow-wrap: break-word;
    text-align: center;
    max-width: 50vw;
}

#password-length {
    text-align: center;
}


input {
    background: none;
    color: rgb(140, 140, 140);
    font-size: 18px;
    padding: 10px 10px 10px 5px;
    display: block;
    width: 50%;
    border: none;
    border-radius: 0;
    border-bottom: 1px solid lightgrey;  
  }

  input:focus {
    outline: none;
  }
  
  button {
    background-color: #D6EEFF;
    border-radius: 5px;
    padding: 10px;
    margin: 20px 40px 20px 0;
    font-size: 20px;
    cursor: pointer;
  }
  
  .lucky-btn {
    background-color: #A491D3;
    color: white;
  }


@media(max-width: 780px) {
    .password-section {
        grid-template-areas:
            'box-1'
            'box-2'
            'box-3';
    }
    .box-3 {
        grid-template-areas: 
            'ads-box1'
            'ads-box2'  
            'ads-box3';
    }
}

